Normalizo respuesta preview y detail product, creo endpoint get product by id
