# backend/src/routes/product.js
@@ -8,5 +8,6 @@ const permission = require("../middleware/role-required")
 router.get("", auth, permission('products:get'), controllers.getProducts);
 router.get("/query", auth, permission('products:get'), controllers.queryProducts);
 router.get("/category/:idCat", auth, permission('products:get'), controllers.getProductsByCategory);
+router.get("/:provider/:externalId", auth, permission('products:get'), controllers.getProductById);
 
 module.exports = router;
